--- a/templates/macro_mate/login.html
+++ b/templates/macro_mate/login.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="static/css/login.css">
+    <script type="text/javascript" href="login.js"></script>
     <title>Bootstrap 4 Login/Register Form</title>
-    <script type="text/javascript" src="static/js/login.js"></script>
 </head>
 <body>
     <div id="logreg-forms">
