working registration redux

--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -1,6 +1,10 @@
 {% extends 'macro_mate/base.html' %}
 
 {% block title_block %}
+    Register
+{% endblock %}
+
+{% block body_block %}
 <h1> Register for MacroMate! </h1>
 
 <form method = "post" action =".">
