--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,7 +8,7 @@
 
 <h1>Login</h1>
 
-<form method = "post" action=".">
+<form method ="post" action=".">
     {% csrf_token %}
 
     {{ form.as_p }}
@@ -19,7 +19,7 @@
 
 <p>
     Don't have an account?
-    <a href ="{% url 'registration_register' %}"> Register here! <a/>
+    <a href ="{% url 'registration_register' %}"> Register here! </a>
 </p>
 
 {% endblock %}
