--- a/templates/macro_mate/base.html
+++ b/templates/macro_mate/base.html
@@ -25,7 +25,7 @@
 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
         {% comment %} App Title - Could probably get this from a variable {% endcomment %}
-        <h5 class="my-0 mr-md-auto font-weight-normal">MacroMate</h5>
+        <h5 class="my-0 mr-md-auto font-weight-normal"> {% if user.is_authenticated %} {{ user.username }} {% endif %} MacroMate</h5>
         {% comment %} App Nav - Needs to be replaced with links {% endcomment %}
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark" href="#">Features</a>
@@ -55,6 +55,15 @@
                 <div class="col-6 col-md">
                     <h5>Features</h5>
                     <ul class="list-unstyled text-small">
+                        {% if user.is_authenticated %}
+                        <li><a class="text-muted" href="{% url 'auth_logout' %}?next={% url 'auth_logout' %}">Logout</a></li>
+                      
+
+                        {% else %}
+                        <li><a class="text-muted" href="{% url 'auth_login'%}?next={% url 'auth_login' %}">Login</a></li>
+                        {% endif %}
+                        
+                        
                         <li><a class="text-muted" href="#">Cool stuff</a></li>
                         <li><a class="text-muted" href="#">Random feature</a></li>
                         <li><a class="text-muted" href="#">Team feature</a></li>
