--- a/templates/macro_mate/base.html
+++ b/templates/macro_mate/base.html
@@ -34,7 +34,17 @@
             <a class="p-2 text-dark" href="#">Account</a>
         </nav>
         {% comment %} Sign up and Login Space - Needs to be dynamic to 'log out' if user is logged in {% endcomment %}
-        <a class="btn btn-outline-primary" href="#">Sign up</a>
+
+        {% if user.is_authenticated %}
+
+        <a class="btn btn-outline-primary" href="#"> Logout</a>
+
+        {% else %}
+
+        <a class="btn btn-outline-primary" href="#"> Sign up</a>
+
+        {% endif %}
+        
     </div>
 
     <div class="container">
@@ -52,12 +62,15 @@
                 <div class="col-6 col-md">
                     <h5>Features</h5>
                     <ul class="list-unstyled text-small">
+                        <!-- If the user is logged in, display Logout option-->
                         {% if user.is_authenticated %}
                         <li><a class="text-muted" href="{% url 'auth_logout' %}?next={% url 'auth_logout' %}">Logout</a></li>
                       
 
                         {% else %}
+                        <!-- If there is no user logged in, display Login and Register options-->
                         <li><a class="text-muted" href="{% url 'auth_login'%}?next={% url 'auth_login' %}">Login</a></li>
+                        <li><a class="text-muted" href="{% url 'registration_register' %}?next={% url 'registration_register' %}">Register</a></li>
                         {% endif %}
                         
                         
