--- a/templates/macro_mate/base.html
+++ b/templates/macro_mate/base.html
@@ -37,14 +37,14 @@
 
         {% if user.is_authenticated %}
 
-        <a class="btn btn-outline-primary" href="#"> Logout</a>
+        <a class="btn btn-outline-primary" href="{% url 'auth_logout' %}?next={% url 'auth_logout' %}"> Logout</a>
 
         {% else %}
 
-        <a class="btn btn-outline-primary" href="#"> Sign up</a>
+        <a class="btn btn-outline-primary" href="{% url 'registration_register' %}?next={% url 'registration_register' %}"> Sign up</a>
 
         {% endif %}
-        
+
     </div>
 
     <div class="container">
