--- a/templates/macro_mate/base.html
+++ b/templates/macro_mate/base.html
@@ -41,6 +41,8 @@
 
         {% else %}
 
+        <a class="btn btn-outline-primary" href="{% url 'auth_login'%}?next={% url 'auth_login' %}"> Login</a>
+
         <a class="btn btn-outline-primary" href="{% url 'registration_register' %}?next={% url 'registration_register' %}"> Sign up</a>
 
         {% endif %}
