Changed weekly plan to your meals

--- a/templates/macro_mate/base.html
+++ b/templates/macro_mate/base.html
@@ -29,7 +29,7 @@
         {% comment %} App Nav - Needs to be replaced with links {% endcomment %}
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark" href="{% url 'macro_mate:meals' %}">Meals</a>
-            <a class="p-2 text-dark" href="{% url 'macro_mate:weekly_plan' %}">Weekly Plan</a>
+            <a class="p-2 text-dark" href="{% url 'macro_mate:your_meals' %}">Your meals</a>
             <a class="p-2 text-dark" href="#">Explore</a>
             <a class="p-2 text-dark" href="#">Account</a>
         </nav>
