--- a/templates/macro_mate/your_meals.html
+++ b/templates/macro_mate/your_meals.html
@@ -11,6 +11,9 @@
 
     <div class="square-container">
 
+    {% comment %} Probably to replaced by a for loop {% endcomment %}
+
+
         <div class="square">
             <div class="content">
             </div>
