--- a/templates/macro_mate/base.html
+++ b/templates/macro_mate/base.html
@@ -25,27 +25,39 @@
 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
         {% comment %} App Title - Could probably get this from a variable {% endcomment %}
-        <h5 class="my-0 mr-md-auto font-weight-normal"> {% if user.is_authenticated %} {{ user.username }} {% endif %} MacroMate</h5>
+        <h5 class="my-0 mr-md-3 font-weight-normal">
+            MacroMate {% if user.is_authenticated %} - <i class="fa fa-user" aria-hidden="true"></i> {{ user.username }}
+            {% endif %}
+        </h5>
+
+        {% comment %} Use H1 with H5 styling as this is the main page header {% endcomment %}
+        <h1 class="h5 my-0 mr-md-auto font-weight-bold">
+            {% block page-header-block %} {% endblock  %}
+        </h1>
         {% comment %} App Nav - Needs to be replaced with links {% endcomment %}
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark" href="#">Meals</a>
             <a class="p-2 text-dark" href="#">Weekly Plan</a>
             <a class="p-2 text-dark" href="#">Explore</a>
             <a class="p-2 text-dark" href="#">Account</a>
+
+            {% if user.is_authenticated %}
+
+            <a class="p-2 btn btn-outline-primary" href="{% url 'auth_logout' %}?next={% url 'auth_logout' %}">
+                Logout</a>
+
+            {% else %}
+
+            <a class="p-2 btn btn-primary" href="{% url 'auth_login'%}"> Login</a>
+
+            <a class="p-2 btn btn-outline-primary"
+                href="{% url 'registration_register' %}?next={% url 'registration_register' %}"> Sign up</a>
+
+            {% endif %}
         </nav>
         {% comment %} Sign up and Login Space - Needs to be dynamic to 'log out' if user is logged in {% endcomment %}
 
-        {% if user.is_authenticated %}
 
-        <a class="btn btn-outline-primary" href="{% url 'auth_logout' %}?next={% url 'auth_logout' %}"> Logout</a>
-
-        {% else %}
-
-        <a class="btn btn-outline-primary" href="{% url 'auth_login'%}"> Login</a>
-
-        <a class="btn btn-outline-primary" href="{% url 'registration_register' %}?next={% url 'registration_register' %}"> Sign up</a>
-
-        {% endif %}
 
     </div>
 
@@ -66,16 +78,18 @@
                     <ul class="list-unstyled text-small">
                         <!-- If the user is logged in, display Logout option-->
                         {% if user.is_authenticated %}
-                        <li><a class="text-muted" href="{% url 'auth_logout' %}?next={% url 'auth_logout' %}">Logout</a></li>
-                      
+                        <li><a class="text-muted" href="{% url 'auth_logout' %}?next={% url 'auth_logout' %}">Logout</a>
+                        </li>
 
                         {% else %}
                         <!-- If there is no user logged in, display Login and Register options-->
                         <li><a class="text-muted" href="{% url 'auth_login'%}">Login</a></li>
-                        <li><a class="text-muted" href="{% url 'registration_register' %}?next={% url 'registration_register' %}">Register</a></li>
+                        <li><a class="text-muted"
+                                href="{% url 'registration_register' %}?next={% url 'registration_register' %}">Register</a>
+                        </li>
                         {% endif %}
-                        
-                        
+
+
                         <li><a class="text-muted" href="#">Cool stuff</a></li>
                     </ul>
                 </div>
