--- a/templates/macro_mate/base.html
+++ b/templates/macro_mate/base.html
@@ -17,23 +17,19 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <!-- Custom styles for this template -->
-    <link href="https://getbootstrap.com/docs/4.1/examples/pricing/pricing.css" rel="stylesheet">
+    {% block css %}
+    {% endblock %}
+
 </head>
 
 <body>
 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
         {% comment %} App Title - Could probably get this from a variable {% endcomment %}
-        <h5 class="my-0 mr-md-3 font-weight-normal">
-            MacroMate {% if user.is_authenticated %} - <i class="fa fa-user" aria-hidden="true"></i> {{ user.username }}
-            {% endif %}
+        <h5 class="my-0 mr-md-auto font-weight-normal">
+            MacroMate
         </h5>
 
-        {% comment %} Use H1 with H5 styling as this is the main page header {% endcomment %}
-        <h1 class="h5 my-0 mr-md-auto font-weight-bold">
-            {% block page-header-block %} {% endblock  %}
-        </h1>
         {% comment %} App Nav - Needs to be replaced with links {% endcomment %}
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark" href="#">Meals</a>
@@ -55,15 +51,17 @@
 
             {% endif %}
         </nav>
-        {% comment %} Sign up and Login Space - Needs to be dynamic to 'log out' if user is logged in {% endcomment %}
-
-
-
     </div>
 
     <div class="container">
 
         <main>
+            {% comment %} Use H1 with H5 styling as this is the main page header {% endcomment %}
+
+            <h1 class="pb-2 my-4 mx-2 border-bottom">
+                {% block header_block %} {% endblock %}
+            </h1>
+
             {% block body_block %}
             {% endblock %}
         </main>
@@ -113,22 +111,19 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
     </script>
-    <script>
-        window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
-    <script src="../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/vendor/holder.min.js"></script>
-    <script>
-        Holder.addTheme('thumb', {
-            bg: '#55595c',
-            fg: '#eceeef',
-            text: 'Thumbnail'
-        });
-    </script>
+
+    {% block js %}
+    {% endblock %}
 </body>
 
 </html>
