--- a/templates/macro_mate/add_meal.html
+++ b/templates/macro_mate/add_meal.html
@@ -11,9 +11,8 @@
 <script src="https://cdn.jsdelivr.net/npm/@yaireo/tagify@3.6.2/dist/tagify.polyfills.min.js"></script>
 <script src="{% static 'js/add_meal.js' %}"></script>
 <script>
-    // Run the code in js/add_meal.js here, but so we can use the URL for the AJAX
-    const MAX_RESULTS = 10;
-    addTagify("{% url 'api:tags' %}", MAX_RESULTS)
+    // Hook the tag script in js/add_meal.js here so we can use the URL for the AJAX
+    addTagify("{% url 'api:tags' %}")
 </script>
 {% endblock %}
 
