--- a/templates/macro_mate/base.html
+++ b/templates/macro_mate/base.html
@@ -17,95 +17,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    {% block css %}
+    <link rel="stylesheet" href="{% static 'css/nutrition_facts.css' %}" {% block css %} {% endblock %} </head> <body>
+
+    {% block layout %}
     {% endblock %}
-
-</head>
-
-<body>
-
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-        {% comment %} App Title - Could probably get this from a variable {% endcomment %}
-        <h5 class="my-0 mr-md-auto font-weight-normal">
-            MacroMate
-        </h5>
-
-        {% comment %} App Nav - Needs to be replaced with links {% endcomment %}
-        <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-dark" href="#">Meals</a>
-            <a class="p-2 text-dark" href="#">Weekly Plan</a>
-            <a class="p-2 text-dark" href="#">Explore</a>
-            <a class="p-2 text-dark" href="#">Account</a>
-
-            {% if user.is_authenticated %}
-
-            <a class="p-2 btn btn-outline-primary" href="{% url 'auth_logout' %}?next={% url 'auth_logout' %}">
-                Logout</a>
-
-            {% else %}
-
-            <a class="p-2 btn btn-primary" href="{% url 'auth_login'%}"> Login</a>
-
-            <a class="p-2 btn btn-outline-primary"
-                href="{% url 'registration_register' %}?next={% url 'registration_register' %}"> Sign up</a>
-
-            {% endif %}
-        </nav>
-    </div>
-
-    <div class="container">
-
-        <main>
-            {% comment %} Use H1 with H5 styling as this is the main page header {% endcomment %}
-
-            <h1 class="pb-2 my-4 mx-2 border-bottom">
-                {% block header_block %} {% endblock %}
-            </h1>
-
-            {% block body_block %}
-            {% endblock %}
-        </main>
-
-        {% comment %} Footer for other links etc. {% endcomment %}
-        <footer class="pt-4 my-md-5 pt-md-5 border-top">
-            <div class="row">
-                <div class="col-12 col-md">
-                </div>
-                <div class="col-6 col-md">
-                    <h5>Features</h5>
-                    <ul class="list-unstyled text-small">
-                        <!-- If the user is logged in, display Logout option-->
-                        {% if user.is_authenticated %}
-                        <li><a class="text-muted" href="{% url 'auth_logout' %}?next={% url 'auth_logout' %}">Logout</a>
-                        </li>
-
-                        {% else %}
-                        <!-- If there is no user logged in, display Login and Register options-->
-                        <li><a class="text-muted" href="{% url 'auth_login'%}">Login</a></li>
-                        <li><a class="text-muted"
-                                href="{% url 'registration_register' %}?next={% url 'registration_register' %}">Register</a>
-                        </li>
-                        {% endif %}
-
-
-                        <li><a class="text-muted" href="#">Cool stuff</a></li>
-                    </ul>
-                </div>
-                <div class="col-6 col-md">
-                    <h5>Resources</h5>
-                    <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="#">Resource</a></li>
-                    </ul>
-                </div>
-                <div class="col-6 col-md">
-                    <h5>About</h5>
-                    <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="#">Team</a></li>
-                    </ul>
-                </div>
-            </div>
-        </footer>
-    </div>
 
 
     <!-- Bootstrap core JavaScript
@@ -124,6 +39,6 @@
 
     {% block js %}
     {% endblock %}
-</body>
+    </body>
 
 </html>
