--- a/templates/macro_mate/add_meal.html
+++ b/templates/macro_mate/add_meal.html
@@ -56,7 +56,7 @@ Add New Meal
                 {% if field.html_name != 'categories' %}
                 {{ field|addcss:'form-control' }}
                 {% else %}
-                {{field|addcss:'list-unstyled'}}
+                {{field|addcss:'list-unstyled form-check-inline'}}
                 {% endif %}
 
                 {% if field.help_text %}
@@ -73,11 +73,14 @@ Add New Meal
                 Image
             </h2>
             <img id="image_holder" src="{% static 'images/placeholder.png' %}" class="img-fluid" alt="Responsive image">
-            {{form.image}}
+            <div class="form-group ">
+                {{form.image}}
+            </div>
+
             <h2 class="pb-2 my-4 mx-2 border-bottom">
                 Nutritional Analysis
             </h2>
-            <div>
+            <div id="no_analysis_message">
                 No analysis performed.
             </div>
             <div id="ingredient_error" class="text-danger">
@@ -86,9 +89,14 @@ Add New Meal
                 Ensure all ingredients are on seperate lines.
             </div>
 
-            {% include 'macro_mate/ingredient_table.html' with table_id="ingredient_table" table_title="Ingredients Detected" %}
+            <div id="ingredient_table">
+                {% include 'macro_mate/ingredient_table.html' with table_title="Ingredients Detected" %}
+            </div>
 
-            {% include 'macro_mate/nutrition_table.html' with table_id="nutrient_table" table_title="Nutritional Analysis" calories_quantity="4" calories_unit="kcal" fat_quantity="3000" fat_unit="g" protein_quantity="3000" protein_unit="g" carbs_quantity="3402" carbs_unit="g"%}
+            <div id="nutrition_table">
+                {% include 'macro_mate/nutrition_table.html' with table_title="Nutritional Analysis" calories_quantity="4" calories_unit="kcal" fat_quantity="3000" fat_unit="g" protein_quantity="3000" protein_unit="g" carbs_quantity="3402" carbs_unit="g"%}
+            </div>
+
 
 
 
@@ -96,8 +104,11 @@ Add New Meal
 
 
     </div>
-    <div class="row">
-        <input class="btn btn-success" type="submit" name="submit" value="Add Meal" />
+    <div class="row my-4">
+        <button name="analyse" id="analyse" class="btn btn-lg btn-block btn-success mr-2 ml-auto" type="button"
+            value="Analyse">
+            <i class="fa fa-refresh" aria-hidden="true"></i> Analyse </button>
+        <input id="submit" class="btn btn-lg btn-block btn-primary" type="submit" name="submit" value="Add Meal" />
     </div>
 
 </form>
