--- a/templates/macro_mate/base.html
+++ b/templates/macro_mate/base.html
@@ -17,7 +17,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="{% static 'css/nutrition_facts.css' %}" {% block css %} {% endblock %} </head> <body>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css">
+
+    <link rel="stylesheet" href="{% static 'css/nutrition_facts.css' %}">
+
+    {% block css %} {% endblock %}
+
+</head>
+
+<body>
 
     {% block layout %}
     {% endblock %}
@@ -39,6 +47,6 @@
 
     {% block js %}
     {% endblock %}
-    </body>
+</body>
 
 </html>
