--- a/templates/macro_mate/nutrition_table.html
+++ b/templates/macro_mate/nutrition_table.html
@@ -5,7 +5,7 @@
 </h3>
 
 <div class="d-flex justify-content-center">
-
+    {% comment %} Custom CSS from static in base.html {% endcomment %}
     <div class="nutrition-label">
         <div id="id_nutrition_table_calories" class="nutrition-title">calories</div>
         <div id="id_nutrition_table_calories_quantity" class="nutrition-bottom">
