functional add_meal form

--- a/templates/macro_mate/nutrition_table.html
+++ b/templates/macro_mate/nutrition_table.html
@@ -4,6 +4,10 @@
     {{ table_title }}
 </h3>
 
+<h4 class="h5 pb-2 my-4 mx-2">
+    For <span id="id_nutrition_table_servings">{{servings}}</span> serving(s):
+</h4>
+
 <div class="d-flex justify-content-center">
     {% comment %} Custom CSS from static in base.html {% endcomment %}
     <div class="nutrition-label">
