--- a/templates/macro_mate/add_meal.html
+++ b/templates/macro_mate/add_meal.html
@@ -1,4 +1,4 @@
-{% extends 'macro_mate/layout.html' %}
+{% extends 'macro_mate/base.html' %}
 {% load staticfiles %}
 {% comment %} Add custom filters for form CSS below {% endcomment %}
 {% load filters %}
@@ -27,7 +27,7 @@ Add New Meal
 {% block body_block %}
 
 {% comment %} Form encapsulates whole view. Responsive layout. {% endcomment %}
-<form id="meal_form" method="post" action="/macro_mate/add_meal/">
+<form id="meal_form" enctype="multipart/form-data" method="post" action="/macro_mate/add_meal/">
     {% csrf_token %}
 
     {% comment %} Hidden form fields {% endcomment %}
@@ -88,7 +88,15 @@ Add New Meal
             </h2>
 
             <img id="image_holder" src="{% static 'images/placeholder.png' %}" class="img-fluid" alt="Responsive image">
-            <div class="form-group "> {{form.image}} </div>
+            <div class="form-group ">
+                {% for error in form.image.errors %}
+                <div>
+                    <span class="text-danger"> {{error}} </span>
+                </div>
+                {% endfor %}
+                {{form.image}}
+
+            </div>
 
             <h2 class="pb-2 my-4 mx-2 border-bottom">
                 Nutritional Analysis
@@ -96,16 +104,6 @@ Add New Meal
             {% comment %} Heavily controlled by JS (see add_meal.js) {% endcomment %}
             <div id="no_analysis_message">
                 No analysis performed.
-            </div>
-
-            <div id="ingredient_error" class="text-danger">
-                Ingredient parsing error.
-                Try with different names / quantities and analyse again if you are unhappy.
-                Ensure all ingredients are on seperate lines.
-            </div>
-
-            <div id="ingredient_table">
-                {% include 'macro_mate/ingredient_table.html' with table_title="Ingredients Detected" %}
             </div>
 
             <div id="nutrition_table">
