--- a/templates/macro_mate/meal.html
+++ b/templates/macro_mate/meal.html
@@ -5,13 +5,19 @@
     Meals
 {% endblock %}
 
+{% block header_block %}
+    <div class="row justify-content-md-center">
+        {{meal.name}}
+    </div>
+{% endblock %}
 
 {% block body_block %}
-    <h1>{{ meal.name }}</h1>
+    
     <h4>Tags</h4>
     {% for tag in meal.tags.all %}
         <div class="mr-1 badge badge-info">{{ tag }}</div>
     {% endfor %}
+    <img src="{{meal.image.url}}" alt ="{{meal.name}}" width="500" height="auto" />
     <h4>Nutritional information</h4>
     <p>Calories: {{ meal.calorie_quantity }}{{ meal.calorie_unit }}</p>
     <p>Fat: {{ meal.fat_quantity }}{{ meal.fat_unit }}</p>
