add link to home

--- a/templates/macro_mate/base.html
+++ b/templates/macro_mate/base.html
@@ -29,9 +29,13 @@
 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
         {% comment %} App Title - Could probably get this from a variable {% endcomment %}
+
         <h5 class="my-0 mr-md-auto font-weight-normal">
-            MacroMate
+            <a class="text-dark" href="/">
+                MacroMate
+            </a>
         </h5>
+
 
         {% comment %} App Nav - Needs to be replaced with links {% endcomment %}
         <nav class="my-2 my-md-0 mr-md-3">
